--- a/views/layout.html
+++ b/views/layout.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <link rel="stylesheet" href="/stylesheets/bootstrap-1.0.0.css" />
+    <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css" /><!--bootstrap-1.0.0.css-->
     <link rel="stylesheet" href="/stylesheets/jquery-ui-1.8.14.custom.css" />
     <link rel="stylesheet" href="/stylesheets/jquery.fancy_suggest.css" />
     <link rel="stylesheet" href="/stylesheets/jquery.countdown.css" />
