fixed misc bugs, updated bootstrap reliant CSS to reconform

--- a/views/layout.html
+++ b/views/layout.html
@@ -21,7 +21,10 @@
 	<!-- type ahead for user screens -->
 	<script type="text/javascript" src="/javascript/jquery.fancy_input.js"></script>
 	<script type="text/javascript" src="/javascript/jquery.fancy_suggest.js"></script>
-	
+	    
+    <!-- tabs -->
+    <script type="text/javascript" src="/stylesheets/bootstrap/js/bootstrap-tabs.js"></script>
+    
 	<!-- graphing -->
 	<script type="text/javascript" src="/javascript/flot/jquery.flot.js"></script>
 	
