--- a/views/campaign/dashboard.html
+++ b/views/campaign/dashboard.html
@@ -49,7 +49,7 @@
 <div class="span16 columns">
 
 <!-- display tabs -->
-<ul id="dashtabs" class="tabs">
+<ul id="dashtabs" class="tabs" data-tabs="tabs">
     <li class="active"><a href="#standings">Current Standings</a></li>
     <li><a href="#recentitem">Recent Items</a></li>
     <li><a href="#myitems">My Items</a></li>
@@ -64,91 +64,59 @@
 	 <li><a href="#recentbonus">Recent Bonuses</a></li>
 </ul>
 
-<div id="standings" class="tabview">
-	<table class="common-table zebra-striped sortable" id="teams">
-		<thead>
-			<tr><th>Team</th>
-			<th>Total Points</th>
-			<th>Bonus Points</th></tr>
-		</thead>
-		<tbody>
-		<% for(var i=0; i < teams.length; i++) {%>
-		<tr>
-			<td><a href="/teams/show/<%= teams[i].id%>/<%= teams[i].slug%>"><%= teams[i].name %></a></td>
-			<td><%=teams[i].points%></td>
-			<td><%=teams[i].bonusPoints%></td>
-		</tr>
-		<% } %>
-		</tbody>
-	</table>
-</div>
-
-<!-- build recent items tab -->
-<div id="recentitem" class="tabview" style="display:none;">
-		<table class="common-table zebra-striped sortable">
-		<thead>
-			<tr><th>Created</th>
-			<th>Item</th>
-			<th>Total Points</th>
-			<th>Bonus Points</th>
-			<th>By</th>
-			<th>Team</th></tr>
-		</thead>
-		<tbody>
-		<% for(var i=0; i < recentItems.length; i++) {%>
+<div id="my-tab-content" class="tab-content">
+	<div id="standings" class="active">
+		<table class="common-table zebra-striped sortable" id="teams">
+			<thead>
+				<tr><th>Team</th>
+				<th>Total Points</th>
+				<th>Bonus Points</th></tr>
+			</thead>
+			<tbody>
+			<% for(var i=0; i < teams.length; i++) {%>
 			<tr>
-				<td><%=recentItems[i].created_at_format%></td>
-				<td><a href="/items/show/<%= recentItems[i].id%>/<%= recentItems[i].slug%>"><%=recentItems[i].quantity%> <%= recentItems[i].name %></a></td>
-				<td><%=(items[i].points + items[i].bonus) * items[i].quantity %></td>
-				<td><%=items[i].bonus * items[i].quantity %></td>
-				<td><a href="/users/name/<%=recentItems[i].created_by_login%>"><%=recentItems[i].created_by_login%></a></td>
-				<td>
-				<%if (recentItems[i].team) {%>
-					<a href="/teams/show/<%=recentItems[i].teamId%>"><%=recentItems[i].team.name%></a>
-				<%}%>
-				</td>
+				<td><a href="/teams/show/<%= teams[i].id%>/<%= teams[i].slug%>"><%= teams[i].name %></a></td>
+				<td><%=teams[i].points%></td>
+				<td><%=teams[i].bonusPoints%></td>
 			</tr>
-		<%}%>
-		</tbody>
+			<% } %>
+			</tbody>
 		</table>
-</div>
-
-<!-- build my items tab -->
-<div id="myitems" class="tabview" style="display:none;">
-	<table class="common-table zebra-striped sortable">
-		<thead>
-			<tr>
-			<th>Created</th>
-			<th>Item</th>
-			<th>Total Points</th>
-			<th>Bonus Points</th>
-			</tr>
-		</thead>
-		<tbody>
-		<% for(var i=0; i < items.length; i++) {%>
-			<tr>
-				<td><%=items[i].created_at_format%></td>
-				<td><a href="/items/show/<%= items[i].id%>/<%= items[i].slug%>"><%=items[i].quantity%> <%= items[i].name %></a></td>
-				<td><%=(items[i].points + items[i].bonus) * items[i].quantity %></td>
-				<td><%=items[i].bonus * items[i].quantity %></td>
-			</tr>
-		<%}%>
-		</tbody>
-	</table>
-</div>
-
-<!-- build team specific tabs -->
-<% for(var i=0; i < teams.length; i++) {%>
-	<%if (teams[i].isMember) {%>
-		<div id="team<%=i%>" class="tabview" style="display:none;">
-			<div class="additem">
-				 <a href="/items/add/<%=teams[i].id%>" class="btn primary">Add an Item</a>
-				 <a href="/teams/show/<%=teams[i].id%>" class="btn">Team Details</a>
-				 <br />
-			</div>
-		
-		<%if (teams[i].items) {%>
+	</div>
+	
+	<!-- build recent items tab -->
+	<div id="recentitem">
 			<table class="common-table zebra-striped sortable">
+			<thead>
+				<tr><th>Created</th>
+				<th>Item</th>
+				<th>Total Points</th>
+				<th>Bonus Points</th>
+				<th>By</th>
+				<th>Team</th></tr>
+			</thead>
+			<tbody>
+			<% for(var i=0; i < recentItems.length; i++) {%>
+				<tr>
+					<td><%=recentItems[i].created_at_format%></td>
+					<td><a href="/items/show/<%= recentItems[i].id%>/<%= recentItems[i].slug%>"><%=recentItems[i].quantity%> <%= recentItems[i].name %></a></td>
+					<td><%=(items[i].points + items[i].bonus) * items[i].quantity %></td>
+					<td><%=items[i].bonus * items[i].quantity %></td>
+					<td><a href="/users/name/<%=recentItems[i].created_by_login%>"><%=recentItems[i].created_by_login%></a></td>
+					<td>
+					<%if (recentItems[i].team) {%>
+						<a href="/teams/show/<%=recentItems[i].teamId%>"><%=recentItems[i].team.name%></a>
+					<%}%>
+					</td>
+				</tr>
+			<%}%>
+			</tbody>
+			</table>
+	</div>
+	
+	<!-- build my items tab -->
+	<div id="myitems">
+		<table class="common-table zebra-striped sortable">
 			<thead>
 				<tr>
 				<th>Created</th>
@@ -158,89 +126,125 @@
 				</tr>
 			</thead>
 			<tbody>
-			<% for(var j=0; j < teams[i].items.length; j++) {%>
+			<% for(var i=0; i < items.length; i++) {%>
 				<tr>
-					<td><%=teams[i].items[j].created_at_format%></td>
-					<td><a href="/items/show/<%= teams[i].items[j].id%>/<%= teams[i].items[j].slug%>"><%=teams[i].items[j].quantity%> <%= teams[i].items[j].name %></a></td>
-					<td><%=(teams[i].items[j].points + teams[i].items[j].bonus) * teams[i].items[j].quantity %></td>
-					<td><%=teams[i].items[j].bonus * teams[i].items[j].quantity %></td>
+					<td><%=items[i].created_at_format%></td>
+					<td><a href="/items/show/<%= items[i].id%>/<%= items[i].slug%>"><%=items[i].quantity%> <%= items[i].name %></a></td>
+					<td><%=(items[i].points + items[i].bonus) * items[i].quantity %></td>
+					<td><%=items[i].bonus * items[i].quantity %></td>
 				</tr>
 			<%}%>
 			</tbody>
-			</table>
-		<%}%>
-		</div>
-	<%}%>
-<%}%>
-
-<div id="itemtypes" class="tabview" style="display:none;">
-	<table class="common-table zebra-striped" id="items">
-		<thead>
-			<tr>
-			<th>Item</th>
-			<th>Quantity</th>
-			<th>Points</th>
-			<th>Bonus Points</th>
-			</tr>
-		</thead>
-		<tbody>
-		<% for(var i=0; i < itemTypes.length; i++) {%>
-			<%if (itemTypes[i].visible) {%>
-		<tr>
-			<td><a href="/itemtypes/show/<%= itemTypes[i].id%>/<%= itemTypes[i].slug%>"><%= itemTypes[i].name %></a></td>
-			<td><%=itemTypes[i].totalQuantity%></td>
-			<td><%=itemTypes[i].totalPoints%></td>
-			<td><%=itemTypes[i].totalBonus%></td>
-		</tr>
-			<%}%>
-		<% } %>
-		</tbody>
-	</table>
-</div>
-
-<div id="recentbonus" class="tabview" style="display:none;">
-	<table class="common-table zebra-striped" id="bonus">
-		<thead>
-			<tr>
-			<th>Bonus</th>
-			<th>Details</th>
-			</tr>
-		</thead>
-		<tbody>
-		<% for(var i=0; i < recentBonuses.length; i++) {%>
-			<tr>
-			<td>
-			<a href="/bonuses/show/<%= recentBonuses[i].id%>/<%=recentBonuses[i].slug%>">
-				<%= recentBonuses[i].title %>
-			</td>
+		</table>
+	</div>
+	
+	<!-- build team specific tabs -->
+	<% for(var i=0; i < teams.length; i++) {%>
+		<%if (teams[i].isMember) {%>
+			<div id="team<%=i%>">
+				<div class="additem">
+					 <a href="/items/add/<%=teams[i].id%>" class="btn primary">Add an Item</a>
+					 <a href="/teams/show/<%=teams[i].id%>" class="btn">Team Details</a>
+					 <br />
+				</div>
 			
-		<%if ('spot' == recentBonuses[i].bonustype) {%>
-				
-			<td>
-			<a href="/bonuses/show/<%=recentBonuses[i].id%>/<%=recentBonuses[i].slug%>">
-				
-				The first <%=recentBonuses[i].numteams%> teams to reach <%=recentBonuses[i].total%> <%=(recentBonuses[i].pointsoritems == 'items')?'items':'points'%>
-				
-			<%if (recentBonuses[i].name) {%>
-				(<%=recentBonuses[i].name%>)
+			<%if (teams[i].items) {%>
+				<table class="common-table zebra-striped sortable">
+				<thead>
+					<tr>
+					<th>Created</th>
+					<th>Item</th>
+					<th>Total Points</th>
+					<th>Bonus Points</th>
+					</tr>
+				</thead>
+				<tbody>
+				<% for(var j=0; j < teams[i].items.length; j++) {%>
+					<tr>
+						<td><%=teams[i].items[j].created_at_format%></td>
+						<td><a href="/items/show/<%= teams[i].items[j].id%>/<%= teams[i].items[j].slug%>"><%=teams[i].items[j].quantity%> <%= teams[i].items[j].name %></a></td>
+						<td><%=(teams[i].items[j].points + teams[i].items[j].bonus) * teams[i].items[j].quantity %></td>
+						<td><%=teams[i].items[j].bonus * teams[i].items[j].quantity %></td>
+					</tr>
+				<%}%>
+				</tbody>
+				</table>
 			<%}%>
-			</a>
-			</td>
-				
-		<%} else {%>
-				
-			<td>
-			<a href="/bonuses/show/<%=recentBonuses[i].id%>/<%=recentBonuses[i].slug%>">
-			<%=recentBonuses[i].points%> points for <%=recentBonuses[i].name%>
-			</a>
-			</td>
+			</div>
 		<%}%>
-		
+	<%}%>
+	
+	<div id="itemtypes">
+		<table class="common-table zebra-striped" id="items">
+			<thead>
+				<tr>
+				<th>Item</th>
+				<th>Quantity</th>
+				<th>Points</th>
+				<th>Bonus Points</th>
+				</tr>
+			</thead>
+			<tbody>
+			<% for(var i=0; i < itemTypes.length; i++) {%>
+				<%if (itemTypes[i].visible) {%>
+			<tr>
+				<td><a href="/itemtypes/show/<%= itemTypes[i].id%>/<%= itemTypes[i].slug%>"><%= itemTypes[i].name %></a></td>
+				<td><%=itemTypes[i].totalQuantity%></td>
+				<td><%=itemTypes[i].totalPoints%></td>
+				<td><%=itemTypes[i].totalBonus%></td>
 			</tr>
-		<% } %>
-		</tbody>
-	</table>
-</div>
+				<%}%>
+			<% } %>
+			</tbody>
+		</table>
+	</div>
+	
+	<div id="recentbonus">
+		<table class="common-table zebra-striped" id="bonus">
+			<thead>
+				<tr>
+				<th>Bonus</th>
+				<th>Details</th>
+				</tr>
+			</thead>
+			<tbody>
+			<% for(var i=0; i < recentBonuses.length; i++) {%>
+				<tr>
+				<td>
+				<a href="/bonuses/show/<%= recentBonuses[i].id%>/<%=recentBonuses[i].slug%>">
+					<%= recentBonuses[i].title %>
+				</td>
+				
+			<%if ('spot' == recentBonuses[i].bonustype) {%>
+					
+				<td>
+				<a href="/bonuses/show/<%=recentBonuses[i].id%>/<%=recentBonuses[i].slug%>">
+					
+					The first <%=recentBonuses[i].numteams%> teams to reach <%=recentBonuses[i].total%> <%=(recentBonuses[i].pointsoritems == 'items')?'items':'points'%>
+					
+				<%if (recentBonuses[i].name) {%>
+					(<%=recentBonuses[i].name%>)
+				<%}%>
+				</a>
+				</td>
+					
+			<%} else {%>
+					
+				<td>
+				<a href="/bonuses/show/<%=recentBonuses[i].id%>/<%=recentBonuses[i].slug%>">
+				<%=recentBonuses[i].points%> points for <%=recentBonuses[i].name%>
+				</a>
+				</td>
+			<%}%>
+			
+				</tr>
+			<% } %>
+			</tbody>
+		</table>
+	</div>
+	
+</div><!-- end tab content -->
+
 
 </div>
 
@@ -260,7 +264,8 @@
 		<%}%>
 		
 		// add tab logic
-		$("#dashtabs a").click(function (){
+		$('.tabs').tabs()
+		/*$("#dashtabs a").click(function (){
 			// set active tab
 			$("#dashtabs li").removeClass("active");
 			$(this).parent().addClass("active");
@@ -273,7 +278,7 @@
 			
 			// disable redirect
 			return false;
-		});
+		});*/
 		
 		 $(".sortable").tablesorter();
 		 $("table#items").tablesorter({ sortList: [[1,1]] });
