--- a/views/app/install.html
+++ b/views/app/install.html
@@ -22,10 +22,52 @@
 	<div class="page-header">
 		<h2>Installation</h2>
 	</div>
-
-	<p>Installation completed! See below for install messages.</p>
+	
+	<p>Welcome to Charity Drive. You first need to create an administrative user. Fill in the fields below and click <strong>Create</strong>. You should then be able to log in as the administrative user.</p>
 	
 	<%- partial('../messages') %>
+	
+		<form method="post" action="/install">
+		<fieldset>
+		<legend>Create an Administrative User</legend>
+
+			<div class="clearfix">
+			<label for="login">Login</label>
+			<div class="input"><input type="text" name="login" id="login" /></div>
+			</div>
+			
+			<div class="clearfix">
+			<label for="first">First Name</label>
+			<div class="input"><input type="text" name="first" id="first" /></div>
+			</div>
+			
+			<div class="clearfix">
+			<label for="last">Last Name</label>
+			<div class="input"><input type="text" name="last" id="last" /></div>
+			</div>
+			
+			<div class="clearfix">
+			<label for="password">Password</label>
+			<div class="input"><input type="password" name="password" id="password" /></div>
+			</div>
+			
+			<div class="clearfix">
+			<label for="password">Retype Password</label><br />
+			<div class="input"><input type="password" name="password2" id="password2" /></div>
+			</div>
+			
+			<div class="clearfix">
+			<label for="enail">Email</label>
+			<div class="input"><input name="email" id="email" /></div>
+			</div>
+			
+			<div class="actions">
+				<input class="btn" type="submit" value="Create" />
+			</div>
+			
+			
+		</fieldset>
+		</form>
 	
 </div>	
 </div>
