updated about page

--- a/views/app/about.html
+++ b/views/app/about.html
@@ -6,11 +6,9 @@
 		<h1>About Charity Campaign</h1>
 	</div>
 	
-	<p>This application was developed using <a href="http://nodejs.org/">node.js</a> for the application, <a href="http://www.mongodb.org/">MongoDB</a> for the database, and <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> for the front end.
-	There is still plenty of work to do on it. <a href="mailto:<%=adminEmail%>?subject=Charity Campaign">Contact me if you want to help.</a></p>
-	<p><a href="http://hross.net/">hross.net</a></p>
-
-	<img src="images/helping.png" alt="" width="700" />
+	<p>This application was developed using <a href="http://nodejs.org/">node.js</a> for the application, <a href="http://www.mongodb.org/">MongoDB</a> for the database, and <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> for the front end.</p>
+	
+	<p>Some of the source code is ugly, but its freely available on <a href="https://github.com/hross/Charity-Campaign">github</a>.</p>
 </div>
 
 </div>
