--- a/views/app/about.html
+++ b/views/app/about.html
@@ -2,6 +2,9 @@
 <div class="row">
 
 <div class="span16 columns">
+
+	<%- partial('../messages') %>
+
 	<div class="page-header">
 		<h1>About Charity Campaign</h1>
 	</div>
