--- a/views/campaign/dashboard.html
+++ b/views/campaign/dashboard.html
@@ -44,6 +44,19 @@
 </div>
 
 <div class="row">
+<div class="span16 columns">
+
+<!-- build team add buttons -->
+	<% for(var i=0; i < teams.length; i++) {%>
+		<%if (teams[i].isMember) {%>
+		<a href="/items/add/<%=teams[i].id%>" class="btn">Add an Item to <%=teams[i].name%></a>
+		<%}%>
+	<%}%>
+<br /><br />		
+</div>
+</div>
+
+<div class="row">
 
 
 <div class="span16 columns">
