Require title for bonuses.

--- a/views/bonus/edit.html
+++ b/views/bonus/edit.html
@@ -211,6 +211,7 @@
 
 		$("#bonusform").validate({
 			rules: {
+				title: {required: true},
 				quantity: {
 					min: 1
 				},
@@ -222,6 +223,9 @@
 				},
 			},
 			messages: {
+				title: {
+					required: "You must enter a title."
+				}
 				quantity: {
 					minlength: "You must enter a quantity greater than 0."
 				},
