--- a/views/team/edit.html
+++ b/views/team/edit.html
@@ -106,7 +106,8 @@
 
 			if (!found || found.length == 0) {
 				$('#members').append("<option value='"+username+"'>"+$('#user').val()+"</option>");
-				$('#members_hidden').append("<option value='"+username+"' selected>"+$('#user').val()+"</option>");
+        $('#members_hidden').append("<option value='"+username+"' selected>"+$('#user').val()+"</option>");
+        $('#user').val('');
 			}
 		});
 		
