added user search. updated add screen

--- a/views/team/add.html
+++ b/views/team/add.html
@@ -80,7 +80,8 @@
 			if (!found || found.length == 0) {
 				$('#members').append("<option value='"+username+"'>"+$('#user').val()+"</option>");
 				$('#members_hidden').append("<option value='"+username+"' selected>"+$('#user').val()+"</option>");
-			}
+			  $('#user').val('');
+      }
 		});
 		
 		$('#btn-remove').click(function(){
