--- a/views/user/index.html
+++ b/views/user/index.html
@@ -45,9 +45,14 @@
 <script>
     // auto suggest for user box
 		$("#search").fancy_suggest({
-			url: "/users/json",
-      tpl_result_begin: '<li class="result {{class}}" id="{{id}}" result_id="{{result_id}}"><a href="/users/{{id}}">',
+      url: "/users/json",
+      callback: search_callback,
+      tpl_result_begin: '<li class="result {{class}}" id="{{id}}" result_id="{{result_id}}"><a href="/users/show{{id}}">',
       		tpl_result_body: '<span class="title">{{title}}</span>',
       		tpl_result_end: '</li></a>'
-		});
+      });
+      
+      var search_callback = function(option) {
+        window.location.href='/users/' + option; 
+      };
 </script>
