--- a/views/layout.html
+++ b/views/layout.html
@@ -109,7 +109,7 @@
   
 <!-- start footer -->
 <div id="footer">
-	<p><a href="/about">This application</a> was design using <a href="http://nodejs.org/">node.js</a>.</p>
+  <p><a href="/about">This application</a> is available on <a href="http://github.com/hross/Charity-Campaign/">github</a>.</p>
 </div>
 <!-- end footer -->
 
