--- a/views/team/show.html
+++ b/views/team/show.html
@@ -1,158 +1,181 @@
 <div class="container">
-<div class="row">
+  <div class="row">
 
-<div class="span4 columns">
-	<h3>Members</h3>
-	<ul class="unstyled">
-		<%if (team.members) {%>
-		<% for(var i=0; i < team.members.length; i++) {%>
-		<li><a href="/users/name/<%= team.members[i].login%>"><%=team.members[i].login%></a></li>
-		<%}%>
-		<%}%>
-	</ul>
-	
-	<h3>Quick Links</h3>
-	<ul class="unstyled">
-		<% if (canAdd) {%>
-		<li><a href="/items/add/<%=team.id%>" class="btn primary">Add an Item</a></li>
-		<%}%>
-		
-		<li><a href="/items/filter/<%=team.id%>">List Items</a></li>
-		<br />
-		<% if (canJoin) {%>
-			<li><a href="/users/join/<%=team.id%>">Join this team</a></li>
-		<%}%>
-	
-		<% if (canLeave) {%>
-			<li><a href="/users/leave/<%=team.id%>">Leave this team</a></li>
-		<%}%>
-	</ul>
+    <div class="span4 columns">
 
-	<%if (isAdmin) {%>
-	<h3>Administration</h3>
-	<ul class="unstyled menu">
-	<li>
-		<a href="/teams/audit/<%= team.id%>/true">Audit Team</a>
-	</li>
-	<li>
-	<a class="btn" href="/teams/edit/<%=team.id%>">Edit Team</a>
-	</li>
-	<li>
-	<a class="btn delete" href="/teams/destroy/<%=team.id%>">Delete Team</a>
-	</li>
-	</ul>
-	<%}%>
-</div>
+      <h3>Quick Links</h3>
+      <ul class="unstyled">
+        <% if (canAdd) {%>
+        <li><a href="/items/add/<%=team.id%>" class="btn primary">Add an Item</a>
+        <br /><br /></li>
+        <%}%>
 
-<div class="span12 columns">
+        <li><a href="/items/filter/<%=team.id%>">List Items</a></li>
+        <br />
+        <% if (canJoin) {%>
+        <li><a href="/users/join/<%=team.id%>">Join this team</a></li>
+        <%}%>
 
-	<%- partial('../messages') %>
-	
-	<div class="page-header">
-		<h2><a href="/teams/show/<%=team.id%>/<%=team.slug%>"><%= team.name%></a></h2>
-	</div>
-	
+        <% if (canLeave) {%>
+        <li><a href="/users/leave/<%=team.id%>">Leave this team</a></li>
+        <%}%>
+      </ul>
 
-		<div class="entry">
-			<div class="points"><%= points%> points</div>
-			<div class="bonusPoints"><%= bonusPoints%> bonus points</div>
-			<div class="quantity"><%= quantity%> items</div>
-			<div class="info">
-				<div class="motto"><%= team.motto%></div>
-				<%if (teamCaptain.login) {%>
-				<div class="captain">Team Captain: <a href="/users/show/<%=teamCaptain.id%>/<%=teamCaptain.slug%>"><%=teamCaptain.login%></a></div>
-				<%}%>
-				
-				<%if (teamSponsor.login) {%>
-				<div class="sponsor">Team Sponsor: <a href="/users/show/<%=teamSponsor.id%>/<%=teamSponsor.slug%>"><%=teamSponsor.login%></a></div>
-				<%}%>
-			</div>
-			<div class="info">
-				<% if (canAdd) {%>
-				<div class="additem">
-				<a href="/items/add/<%=team.id%>" class="btn primary">Add an Item</a>
-				</div>
-				<%}%>
-			</div>
-			<div style="clear: both;">&nbsp;</div>
-		</div>
+      <h3>Members</h3>
+      <ul class="unstyled">
+        <%if (team.members) {%>
+        <% for(var i=0; i < team.members.length; i++) {%>
+        <li><a href="/users/name/<%= team.members[i].login%>"><%=team.members[i].login%></a></li>
+        <%}%>
+        <%}%>
+      </ul>
 
-		<div class="entry">
-			<h2>Score Timeline</h2>
-			<div id="placeholder" style="width:600px;height:300px"></div>
-		</div>		
-		
-		<div class="entry">		
-			<h2>Recent Items</h2>
-			<ul>
-			<% for(var i=0; i < items.length; i++) {%>
-				<li><%=items[i].created_at_format%> - <a href="/items/show/<%= items[i].id%>/<%= items[i].slug%>"><%=items[i].quantity%> <%= items[i].name %></a>
-				(<%=(items[i].points + items[i].bonus) * items[i].quantity %> points)
-				
-				<%if (!items[i].admin) {%>
-				 by <a href="/users/name/<%=items[i].created_by_login%>"><%=items[i].created_by_login%></a>
-				 <%}%>
-				</li>
-			<%}%>
-			</ul>
+      <%if (isAdmin) {%>
+      <h3>Administration</h3>
+      <ul class="unstyled menu">
+        <li>
+        <a href="/teams/audit/<%= team.id%>/true">Audit Team</a>
+        </li>
+        <li>
+        <a class="btn" href="/teams/edit/<%=team.id%>">Edit Team</a>
+        </li>
+        <li>
+        <a class="btn delete" href="/teams/destroy/<%=team.id%>">Delete Team</a>
+        </li>
+      </ul>
+      <%}%>
+    </div>
 
-			<p><a href="/campaigns/show/<%= team.campaignId%>">Back to Campaign</a></p>
-		</div>
+    <div class="span12 columns">
 
-</div>
+      <div class="row">
+        <div class="span12 columns">
+          <%- partial('../messages') %>
 
-</div>
+          <div class="page-header">
+            <h2><a href="/teams/show/<%=team.id%>/<%=team.slug%>"><%= team.name%></a></h2>
+          </div>
+          <div class="motto"><h3><%= team.motto%></h3></div>
+
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="span1 columns">
+          &nbsp;
+        </div>
+        <div class="span11 columns">
+
+          <%if (teamCaptain.login) {%>
+          <span class="captain">
+            <strong>Team Captain:</strong>
+            <em><a href="/users/show/<%=teamCaptain.id%>/<%=teamCaptain.slug%>"><%=teamCaptain.login%></a></em>
+          </span>
+          <%}%>
+
+          <span style="padding-left:40px;">&nbsp;</span>
+
+          <%if (teamSponsor.login) {%>
+          <span class="sponsor">
+            <strong>Team Sponsor:</strong>
+            <em><a href="/users/show/<%=teamSponsor.id%>/<%=teamSponsor.slug%>"><%=teamSponsor.login%></a></em>
+          </span>
+          <%}%>
+
+          <br /><br />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="span12 columns">
+
+          <div class="entry">
+            <div class="points"><%= points%> points</div>
+            <div class="bonusPoints"><%= bonusPoints%> bonus points</div>
+            <div class="quantity"><%= quantity%> items</div>
+            <div style="clear: both;">&nbsp;</div>
+          </div>
+
+          <div class="entry">
+            <h2>Score Timeline</h2>
+            <div id="placeholder" style="width:600px;height:300px"></div>
+          </div>		
+
+          <div class="entry">		
+            <h2>Recent Items</h2>
+            <ul>
+              <% for(var i=0; i < items.length; i++) {%>
+              <li><%=items[i].created_at_format%> - <a href="/items/show/<%= items[i].id%>/<%= items[i].slug%>"><%=items[i].quantity%> <%= items[i].name %></a>
+              (<%=(items[i].points + items[i].bonus) * items[i].quantity %> points)
+
+              <%if (!items[i].admin) {%>
+              by <a href="/users/name/<%=items[i].created_by_login%>"><%=items[i].created_by_login%></a>
+              <%}%>
+              </li>
+              <%}%>
+            </ul>
+
+            <p><a href="/campaigns/show/<%= team.campaignId%>">Back to Campaign</a></p>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+
+  </div>
 </div>
 
 
 <script type="text/javascript">
-    // helper for returning the weekends in a period
-    function weekendAreas(axes) {
-        var markings = [];
-        var d = new Date(axes.xaxis.min);
-        // go to the first Saturday
-        d.setUTCDate(d.getUTCDate() - ((d.getUTCDay() + 1) % 7))
-        d.setUTCSeconds(0);
-        d.setUTCMinutes(0);
-        d.setUTCHours(0);
-        var i = d.getTime();
-        do {
-            // when we don't set yaxis, the rectangle automatically
-            // extends to infinity upwards and downwards
-            markings.push({ xaxis: { from: i, to: i + 2 * 24 * 60 * 60 * 1000 } });
-            i += 7 * 24 * 60 * 60 * 1000;
-        } while (i < axes.xaxis.max);
+  // helper for returning the weekends in a period
+function weekendAreas(axes) {
+  var markings = [];
+  var d = new Date(axes.xaxis.min);
+  // go to the first Saturday
+  d.setUTCDate(d.getUTCDate() - ((d.getUTCDay() + 1) % 7))
+    d.setUTCSeconds(0);
+  d.setUTCMinutes(0);
+  d.setUTCHours(0);
+  var i = d.getTime();
+  do {
+    // when we don't set yaxis, the rectangle automatically
+    // extends to infinity upwards and downwards
+    markings.push({ xaxis: { from: i, to: i + 2 * 24 * 60 * 60 * 1000 } });
+    i += 7 * 24 * 60 * 60 * 1000;
+  } while (i < axes.xaxis.max);
 
-        return markings;
-    }
+  return markings;
+}
 
 $(function () {
-	var d = new Date();
+    var d = new Date();
 
     var d1 = [];
-    	
-    	<% 
-    	var sum = 0;
-    	for(var i=items.length-1; i >= 0; i--) {%>
-    	<%sum += (items[i].points + items[i].bonus) * items[i].quantity;%>
-	d1.push([<%=items[i].created_at.getTime()%>,<%=sum%>]); //<%=items[i].created_at%>
-    	<%}%>
-		
-	var options = {
-		xaxis: { mode: "time", timeformat: "%m/%d/%y %H:%M", tickLength: 5 },
-		grid: { markings: weekendAreas }
-    };
-    
-	var placeholder = $("#placeholder");
-    var plot = $.plot(placeholder, [
-        {
-            data: d1
-        },
-    ],
-	options);
-	
-	// example of how to do a placeholder
-	//o = plot.pointOffset({ x: .25, y: 32});
-    //placeholder.append('<div style="position:absolute;left:' + (o.left + 4) + 'px;top:' + o.top + 'px;color:#666;font-size:smaller">Team 1</div>');
+
+    <% 
+    var sum = 0;
+    for(var i=items.length-1; i >= 0; i--) {%>
+    <%sum += (items[i].points + items[i].bonus) * items[i].quantity;%>
+    d1.push([<%=items[i].created_at.getTime()%>,<%=sum%>]); //<%=items[i].created_at%>
+    <%}%>
+
+    var options = {
+xaxis: { mode: "time", timeformat: "%m/%d/%y %H:%M", tickLength: 5 },
+grid: { markings: weekendAreas }
+};
+
+var placeholder = $("#placeholder");
+var plot = $.plot(placeholder, [
+  {
+data: d1
+},
+],
+options);
+
+// example of how to do a placeholder
+//o = plot.pointOffset({ x: .25, y: 32});
+//placeholder.append('<div style="position:absolute;left:' + (o.left + 4) + 'px;top:' + o.top + 'px;color:#666;font-size:smaller">Team 1</div>');
 });
 </script>
