added order to offices

--- a/views/office/add.html
+++ b/views/office/add.html
@@ -21,7 +21,11 @@
 			<div class="input"><input type="text" name="name" id="name" /></div>
 		</div>
 		
-			
+		<div class="clearfix">
+			<label for="order">Order</label>
+			<div class="input"><input type="text" name="order" id="order" /></div>
+		</div>
+		
 		<div class="clearfix">
 			<label for="description">Description</label><br />
 			<div class="input"><textarea name="description" id="description" rows=10 cols=50></textarea></div>
